CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(clipper)

find_package(catkin REQUIRED)

catkin_package(
  INCLUDE_DIRS include
  LIBRARIES clipper
)

include_directories(include/clipper)

ADD_LIBRARY(clipper clipper.cpp)

SET_TARGET_PROPERTIES(clipper PROPERTIES VERSION 16.0.0 SOVERSION 16)

INSTALL (FILES include/clipper/clipper.hpp
  DESTINATION "${CATKIN_PACKAGE_INCLUDE_DESTINATION}")
INSTALL (TARGETS clipper
  LIBRARY DESTINATION "${CATKIN_PACKAGE_LIB_DESTINATION}")
