<?xml version="1.0"?>
<package>
  <name>clipper</name>
  <version>6.1.3</version>
  <description>Library for clipping and offsetting lines and polygons</description>

  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>

  <license>Boost Software License</license>

  <author>Angus Johnson</author>
  <url type="website">http://www.angusj.com/delphi/clipper.php</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
